Fix alignment; See: websharks/comment-mail#187

--- a/comment-mail/client-s/css/menu-pages.css
+++ b/comment-mail/client-s/css/menu-pages.css
@@ -790,7 +790,7 @@ Menu page heading styles.
 .comment-mail-menu-page .pmp-heading .plugin-menu-page-restore-defaults
 {
   float: right;
-  margin: 0 1em 0 0;
+  margin: 0 0.3em 0 0;
 }
 
 /*
